# mavros

./: .gitignore
mavros/: CMakeLists.txt
mavros/scripts/: 8.2plane_mavros_siml.sh  8.2quanter_mavros_siml.sh  px4_mavros_siml.sh  quanter_mavros_siml.sh
mavros/src/: bug_record  fixed_wing_formation_control.cpp  fixed_wing_formation_control.hpp  fixed_wing_mathlib.hpp  fixed_wing_sub_pub.hpp  mathlib.h  mavros_example_3.cpp  tecs.cpp  tecs.hpp  test_mavlink.cpp
mavros/src/communication/: test_mavlink.cpp
mavros/src/communication/include/ardupilotmega/: version.h
mavros/src/communication/include/common/: common.h  version.h
mavros/src/communication/include/icarous/: version.h
mavros/src/communication/include/uAvionix/: version.h
mavros/src/fixed_wing_communication/: test_mavlink.cpp
mavros/src/fixed_wing_formation_control/fixd_wing_communicate/: test_mavlink.cpp  test_mavlink.hpp
mavros/src/fixed_wing_formation_control/fixed_wing_formation_main/: fixed_wing_formation_control.cpp  fixed_wing_formation_control.hpp
mavros/src/fixed_wing_formation_control/fixed_wing_lib/: fixed_wing_sub_pub.hpp  lateral_controller.hpp  mathlib.h  pid_controller.h  pid_controller.hpp  speed_sp.hpp  vector.hpp
mavros/src/fixed_wing_formation_control/matlab_simulink/simulink_model/: airspeed_controller.slx
mavros/src/fixed_wing_formation_control/processing_frame/: FIXED_WING_FORMATION_CONTROL.vsdx
mavros/src/fixed_wing_formation_control/virtual_leader/: vir_leader.cpp  vir_leader.hpp
mavros/src/last_year_work/: CMakeLists.txt  GPS_test.cpp  GPS_test_time.cpp  GPS_test_write.cpp  Leader_Follow_control.cpp  Leader_Follow_control_V2R.cpp  Leader_Follow_control_test.cpp  Ultra_Sonic.cpp  accel_control.cpp  catch_mission.cpp  collision_avoidance.cpp  gps_receiver.cpp  gps_send.cpp  gps_transmitter.cpp  imu_transform.cpp  mavros_example_1.cpp  mavros_example_3.cpp  mission.cpp  mission_add.cpp  mission_add_2.cpp  move.cpp  offb_node.cpp  pose_control_failed.cpp  position_control.cpp  position_control_vins.cpp  position_estimator.cpp  take_off.cpp  test_cv.cpp  the_zone_and_task_record.txt  thrower_mission.cpp  thrower_mission_backup.cpp  thrower_serial.cpp  toudan.cpp  toudan0.cpp  toudanV2.cpp  toudanV3.cpp  track.cpp  track_land.cpp  velocity_control.cpp  velocity_control_backup.cpp  (+8 more)
mavros/src/last_year_work/ref/: fourth1.m  point_tangency1.m
mavros/src/last_year_work/toudan_pathplan/: fourth.cpp  fourth.m  fourth1.m
mavros_msgs/: CMakeLists.txt  package.xml
mavros_msgs/msg/: Formation_fixed_wing.msg
